--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -10,7 +10,7 @@
 
 /* --- Seção Hero --- */
 .hero-section {
-    background:  linear-gradient(to right, black 30%, rgb(18, 116, 228)); /* Um gradiente suave */
+    background:  linear-gradient(to right top, rgb(14, 13, 13) 30%, rgb(18, 116, 228) 100% ); /* Um gradiente suave */
     color: #162c55; /* Cor do texto mais escura para contraste */
     padding: 120px 5%; /* Aumentando o padding vertical */
     border-radius: 10px; /* Bordas arredondadas */
@@ -19,7 +19,7 @@
 
 .hero-content h1 {
     font-size: 2.8rem; /* Título maior */
-    color: #104cbb; /* Cor do título um pouco mais vibrante */
+    color: #0e56db; /* Cor do título um pouco mais vibrante */
     margin-bottom: 20px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.05); /* Pequena sombra no texto */
 }
@@ -30,7 +30,7 @@
 }
 
 .hero-section .subtitle {
-    color: #1546a1; /* Subtítulo na mesma tonalidade */
+    color: #1450be; /* Subtítulo na mesma tonalidade */
     font-size: 1.3rem;
     line-height: 1.8;
     margin-bottom: 35px;
