--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -11,7 +11,7 @@
 /* --- Seção Hero --- */
 .hero-section {
     background:  linear-gradient(to right top, rgb(14, 13, 13) 60%, rgb(18, 116, 228) 100%); 
-    color: #162c55; /* Cor do texto mais escura para contraste */
+    color: #042158; /* Cor do texto mais escura para contraste */
     padding: 120px 5%; /* Aumentando o padding vertical */
     border-radius: 10px; /* Bordas arredondadas */
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1); /* Sombra sutil */
@@ -19,7 +19,7 @@
 
 .hero-content h1 {
     font-size: 2.8rem; /* Título maior */
-    color: #0e56db; /* Cor do título um pouco mais vibrante */
+    color: #dddee0; /* Cor do título um pouco mais vibrante */
     margin-bottom: 20px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.05); /* Pequena sombra no texto */
 }
@@ -30,7 +30,7 @@
 }
 
 .hero-section .subtitle {
-    color: #1450be; /* Subtítulo na mesma tonalidade */
+    color: #b1bfd8; /* Subtítulo na mesma tonalidade */
     font-size: 1.3rem;
     line-height: 1.8;
     margin-bottom: 35px;
